Changing the image path

--- a/docs/BioInfo/scRNAseq/GSE130001.md
+++ b/docs/BioInfo/scRNAseq/GSE130001.md
@@ -10,17 +10,17 @@ https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE130001
 
 ## 2.数据下载
 
-![image-20221011142320643](GSE130001\image-001.png)
+![image-20221011142320643](GSE130001/image-001.png)
 
 下载解压数据：
 
-![image-20221011142546390](GSE130001\image-002.png)
+![image-20221011142546390](GSE130001/image-002.png)
 
 ## 3.数据预处理
 
 这里的数据是10X标准输出的3个文件，这三个文件指的是：barcodes.tsv, features.tsv, matrix.mtx。这个情况就比较好处理了，barcodes.tsv就是 cell id，features.tsv就是 gene id，matrix.mtx就是计数 counts 矩阵。但我们需要整理一下文件。因为文件名多了一些信息，需要为每个样本单独建立一个文件夹，然后将该样本3个文件对应的重命名一下就可以了。就如下面是一个样本重命名后的。
 
-![image-20221011145629503](GSE130001\image-003.png)
+![image-20221011145629503](GSE130001/image-003.png)
 
 当然，可以用代码解决，需要注意文件路径。
 
@@ -42,7 +42,7 @@ lapply(unique(samples),function(x){
 })
 ```
 
-![image-20221011201220492](GSE130001\image-004.png)
+![image-20221011201220492](GSE130001/image-004.png)
 
 ## 4.读入数据创建Seurat对象
 
@@ -83,7 +83,7 @@ Active assay: RNA (32738 features, 0 variable features)
 VlnPlot(sce.all, features = c("nFeature_RNA", "nCount_RNA"), ncol = 2)
 ```
 
-![image-20221011211207035](GSE130001\image-005.png)
+![image-20221011211207035](GSE130001/image-005.png)
 
 ```
 selected_cell <- WhichCells(sce.all, expression = nFeature_RNA > 300)
@@ -152,7 +152,7 @@ sce.all.filt <- AddMetaData(sce.all.filt, percent.ribo, col.name = "percent.ribo
 VlnPlot(sce.all.filt, features = c("percent.mt","percent.ribo"), ncol = 2)
 ```
 
-![image-20221011211945080](GSE130001\image-006.png)
+![image-20221011211945080](GSE130001/image-006.png)
 
 过滤：
 
@@ -176,7 +176,7 @@ plot2 <- FeatureScatter(sce.all.filt1, feature1 = "nCount_RNA", feature2 = "nFea
 plot1 + plot2
 ```
 
-![image-20221011215444652](GSE130001\image-007.png)
+![image-20221011215444652](GSE130001/image-007.png)
 
 ## 6.**数据标准化**
 
@@ -212,7 +212,7 @@ P2 <- VariableFeaturePlot(object = sce_mvp)
 P1/P2
 ```
 
-![image-20221011221814288](GSE130001\image-008.png)
+![image-20221011221814288](GSE130001/image-008.png)
 
 可以看到上面默认vst和mvp方法找到的高变基因数量差别还挺大的，这里我们用vst默认的结果继续吧。
 
@@ -226,7 +226,7 @@ P4 <- LabelPoints(plot = P2, points = top10_mvp, repel = TRUE)
 P3+P4
 ```
 
-![image-20221011224140209](GSE130001\image-010.png)
+![image-20221011224140209](GSE130001/image-010.png)
 
 ## 8.基因归一化
 
@@ -251,7 +251,7 @@ sce_Scale <- CellCycleScoring(sce,
 RidgePlot(sce_Scale, features = c("PCNA", "TOP2A", "MCM6", "MKI67"), ncol = 2)
 ```
 
-![image-20221011222857455](GSE130001\image-009.png)
+![image-20221011222857455](GSE130001/image-009.png)
 
 ```R
 # 方法一
@@ -274,14 +274,14 @@ P6 <- VizDimLoadings(sce, dims = 1:2, reduction = "pca")
 P5 + P6
 ```
 
-![image-20221011225150132](GSE130001\image-012.png)
+![image-20221011225150132](GSE130001/image-012.png)
 
 ```R
 #看看前18个主成分
 DimHeatmap(sce, dims = 1:18, cells = 100, balanced = TRUE)
 ```
 
-![image-20221011225414855](GSE130001\image-011.png)
+![image-20221011225414855](GSE130001/image-011.png)
 
 我们可以看到PC16之后的热图没有明显的色块，更像一个零散的马赛克，PC1-16可以解释的差异就比较好。还有其他的一些判断方法。也可以用ElbowPlot来估计，PC16后基于平稳。JackStrawPlot图虚线以上的为可用维度，也可以调整 dims 参数，画出所有 pca 查看，这个方法耗时比较久。
 
@@ -297,7 +297,7 @@ P8 <- JackStrawPlot(object = sce, dims = 1:18)
 P7 + P8
 ```
 
-![image-20221011230244120](GSE130001\image-013.png)
+![image-20221011230244120](GSE130001/image-013.png)
 
 ## 10.细胞聚类
 
@@ -318,7 +318,7 @@ sce <- RunTSNE(object = sce, dims = 1:16, do.fast = TRUE)
 DimPlot(sce,reduction = "tsne",label=T)
 ```
 
-![image-20221011231247283](GSE130001\image-014.png)
+![image-20221011231247283](GSE130001/image-014.png)
 
 ```R
 # 在两个样本里12个cluster的分布情况
@@ -326,7 +326,7 @@ table(sce@meta.data$seurat_clusters,sce@meta.data$orig.ident)
 DimPlot(sce,reduction = "tsne",label=T,split.by ='orig.ident')
 ```
 
-![image-20221011231503354](GSE130001\image-015.png)
+![image-20221011231503354](GSE130001/image-015.png)
 
 可以提取数据用ggplot2进行可视化：
 
@@ -350,7 +350,7 @@ P9 <- ggplot(dat,aes(x=tSNE_1,y=tSNE_2,color=cluster))+
 P9
 ```
 
-![image-20221012000455312](GSE130001\image-016.png)
+![image-20221012000455312](GSE130001/image-016.png)
 
 ```R
 #寻找每个cluster的高变代表基因，并选取前5个，进行可视化
@@ -371,13 +371,13 @@ for( i in unique(sce@meta.data$seurat_clusters) ){
 p[[1]][[2]]
 ```
 
-![image-20221012003044563](GSE130001\image-017.png)
+![image-20221012003044563](GSE130001/image-017.png)
 
 ```R
 p[[2]][[1]]
 ```
 
-![image-20221012003258298](GSE130001\image-018.png)
+![image-20221012003258298](GSE130001/image-018.png)
 
 ```R
 #查阅所有的marker基因，可用于人工注释cell type
@@ -386,7 +386,7 @@ sce.markers <- FindAllMarkers(object = sce, only.pos = TRUE, min.pct = 0.25,
 DT::datatable(sce.markers)
 ```
 
-![image-20221012012229745](GSE130001\image-019.png)
+![image-20221012012229745](GSE130001/image-019.png)
 
 ```R
 #热图可视化每个cluster的marker基因表达差异
@@ -395,7 +395,7 @@ top5 <- sce.markers %>% group_by(cluster) %>% top_n(5, avg_log2FC)
 DoHeatmap(sce,top5$gene,size=3)
 ```
 
-![image-20221012012428148](GSE130001\image-020.png)
+![image-20221012012428148](GSE130001/image-020.png)
 
 ## 11.保存数据
 
